--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "aws-amplify": "^1.1.29",
+    "cors": "^2.8.5",
     "material-ui": "^1.0.0-beta.47",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
